--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <script type="importmap">
 {
   "imports": {
-    "n8n-workflow": "https://aistudiocdn.com/n8n-workflow@^1.118.1",
-    "langchain/": "https://aistudiocdn.com/langchain@^1.0.6/"
+    "n8n-workflow": "https://aistudiocdn.com/n8n-workflow@^1.119.0",
+    "langchain/": "https://aistudiocdn.com/langchain@^1.1.1/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@langchain/core/": "https://aistudiocdn.com/@langchain/core@^1.1.0/",
+    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0",
+    "zod": "https://aistudiocdn.com/zod@^4.1.13",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
